fix out of screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -190,4 +190,5 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  max-width: 100vw;
 }
